@@ -11,18 +11,19 @@
  * <p>
  * This package implements a library for <b>simple</b> persistence of Java objects via XML.
  * It's targeted at Java data structures that are small enough to fit in memory and
- * which are read much more often than they are written, yet still need to be persisted.
- * A good example would be configuration information (e.g., users, groups, rights, etc).
+ * which are read much more often than they are written, and can be persisted as an XML file.
+ * A good example would be configuration information for an application.
  *
  * <p>
  * Attributes and features:
  * <ul>
  * <li>Able to persist an arbitrary java object graph - you supply the XML (de)serialization strategy</li>
- * <li>Built-in support for making deep copies of the object graph</li>
+ * <li>Automatic support for deep copying the object graph</li>
  * <li>Read access uses natural Java</li>
  * <li>Changes are atomic, serialized, wholesale updates</li>
- * <li>All updates must fully validate</li>
+ * <li>All changes must fully validate</li>
  * <li>Modification serial number allows for optimistic locking</li>
+ * <li>Support for "out-of-band" persistent file updates</li>
  * <li>Support for listener notifications on update</li>
  * <li>Support for schema updates via XSLT transforms using the {@link org.dellroad.stuff.schema} classes</li>
  * </ul>
